# interpret

./: .gitignore  intrinsic_function.py  lc.lark  lc.py  lc1.lark  lc_ast.py  lc_raw.py  lc_run.py  pyproject.toml  test_lc.py
lc_demo/: intrinsic_function.py  lc.lark  lc.py  lc_ast.py  lc_raw.py  main.py
