[tool.poetry]
name = "lc_demo"
version = "0.1.0"
description = "lc demo"
authors = ["周倩 <zhouqian@tongyuan.cc>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.9"
wisepy2 = "^1.3"
typing-extensions = "^4.3.0"
lark-action = "^0.1.5"
prompt-toolkit = "^3.0.30"
Pygments = "^2.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mi = 'lc_demo.main:mi'